--- a/appinfo.json
+++ b/appinfo.json
@@ -18,6 +18,6 @@
     "versionCode": 1,
     "versionLabel": "1.0",
     "watchapp": {
-        "watchface": false
+        "watchface": true
     }
 }
